--- a/style.scss
+++ b/style.scss
@@ -7,13 +7,62 @@ $color-black:#252525;
     font-family: 微軟正黑體;
 }
 
+body{
+    background-image: url(./img/arroway.de_tiles-35_d100.jpg);
+}
 nav{
     display: grid;
-    grid-template-columns: 20% 40% 20% 20%;   
+    grid-template-columns: 20% 60% 10% 10%;   
     padding: 20px 5px;
-
+    align-items: baseline;
+    position: fixed;
+    z-index: 1;
+    background: #ffffff55;
+    width: 100%;
+    border-bottom: 2px solid gray;
+    
+    #logo{
+        font-size: 24px;
+    }
     a{
         text-emphasis: none;
         color: #252525;
     }
+}
+
+#banner{
+    height: 100vh;
+    object-fit: cover;
+}
+
+@mixin section-box {
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+
+    img{
+        height: 300px;
+    }
+}
+
+#about{
+    @include section-box();
+}
+
+#about2{
+    @include section-box();
+}
+
+#brand{
+    width: 25%;
+    margin: 0 auto;
+    img{
+        margin: 20px;
+    }
+}
+
+footer {
+    text-align: center;
+    margin: 300px auto;
+    padding: 30px 0;
+    color: $color-black-33;
 }
