--- a/style.css
+++ b/style.css
@@ -38,31 +38,47 @@ nav a {
 }
 
 #banner {
-  height: 100vh;
   -o-object-fit: cover;
      object-fit: cover;
 }
 
 #about {
+  overflow: hidden;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (1fr)[2];
       grid-template-columns: repeat(2, 1fr);
+  margin-top: 50px;
 }
 
 #about img {
-  height: 300px;
+  height: 600px;
 }
 
 #about2 {
+  overflow: hidden;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (1fr)[2];
       grid-template-columns: repeat(2, 1fr);
+  margin-top: 50px;
+      grid-template-areas: "text phone";
 }
 
 #about2 img {
-  height: 300px;
+  height: 600px;
+}
+
+#about2 *:nth-child(1) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  grid-area: phone;
+}
+
+#about2 *:nth-child(2) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: text;
 }
 
 #brand {
@@ -72,5 +88,10 @@ nav a {
 
 #brand img {
   margin: 20px;
+}
+
+footer {
+  margin-top: 100px;
+  text-align: center;
 }
 /*# sourceMappingURL=style.css.map */
