--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ nav a {
 }
 
 #banner {
+  overflow: hidden;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -49,6 +50,10 @@ nav a {
   -ms-grid-columns: (1fr)[2];
       grid-template-columns: repeat(2, 1fr);
   margin-top: 50px;
+}
+
+#about div {
+  margin: 200px;
 }
 
 #about img {
@@ -63,6 +68,10 @@ nav a {
       grid-template-columns: repeat(2, 1fr);
   margin-top: 50px;
       grid-template-areas: "text phone";
+}
+
+#about2 div {
+  margin: 200px;
 }
 
 #about2 img {
@@ -82,6 +91,7 @@ nav a {
 }
 
 #brand {
+  overflow: hidden;
   width: 25%;
   margin: 0 auto;
 }
@@ -91,6 +101,7 @@ nav a {
 }
 
 footer {
+  overflow: hidden;
   margin-top: 100px;
   text-align: center;
 }
