--- a/style.scss
+++ b/style.scss
@@ -31,6 +31,7 @@ nav{
 }
 
 #banner{
+    overflow: hidden;
     object-fit: cover;
 }
 
@@ -46,10 +47,16 @@ nav{
 }
 
 #about{
+    div{
+        margin: 200px;
+    }
     @include section-box();
 }
 
 #about2{
+    div{
+        margin:200px;
+    }
     @include section-box();
     grid-template-areas:"text phone";
     *:nth-child(1){
@@ -61,6 +68,7 @@ nav{
 }
 
 #brand{
+    overflow: hidden;
     width: 25%;
     margin: 0 auto;
     img{
@@ -69,6 +77,7 @@ nav{
 }
 
 footer{
+    overflow: hidden;
     margin-top: 100px;
     text-align: center;
 
